<resources>
    <string name="app_name">Asteroid Radar</string>

    <string name="next_week_asteroids">View week asteroids</string>
    <string name="today_asteroids">View today asteroids</string>
    <string name="saved_asteroids">View saved asteroids</string>
    <string name="close_approach_date_title">Close approach date</string>
    <string name="close_approach_date_content_description">Close approach date: %s</string>
    <string name="absolute_magnitude_title">Absolute magnitude</string>
    <string name="absolute_magnitude_title_content_description">Absolute magnitude: %f au</string>
    <string name="estimated_diameter_title">Estimated diameter</string>
    <string name="estimated_diameter_title_content_description">Estimated diameter: %f km</string>
    <string name="relative_velocity_title">Relative velocity</string>
    <string name="relative_velocity_title_content_description">Relative velocity: %f km/s</string>
    <string name="distance_from_earth_title">Distance from earth</string>
    <string name="distance_from_earth_title_content_description">Distance from earth: %f au</string>
    <string name="astronomical_unit_format">%f au</string>
    <string name="km_unit_format">%f km</string>
    <string name="km_s_unit_format">%f km/s</string>
    <string name="image_of_the_day">Image of the Day</string>
    <string name="astronomica_unit_explanation">The astronomical unit (au) is a unit of length, roughly the distance from Earth to the Sun and equal to about 150 million kilometres (93 million miles)</string>
    <string name="astronomical_unit_explanation_button">Astronomical unit definition</string>
    <string name="this_is_nasa_s_picture_of_day_showing_nothing_yet">This is NASA\'s picture of day, showing nothing yet</string>
    <string name="nasa_picture_of_day_content_description_format">NASA\'s picture of day: %s</string>
    <string name="asteroid_codename_content_description">Codename: %s</string>

    <!-- Used in the detail screen -->
    <string name="potentially_hazardous_asteroid_image_content_description">Potentially hazardous asteroid image</string>
    <string name="not_hazardous_asteroid_image_content_description">Not hazardous asteroid image</string>
    <!-- Used for the icon in the asteroid list (read together with the other information) -->
    <string name="asteroid_potentially_hazardous_content_description">Potentially hazardous</string>
    <string name="asteroid_not_potentially_hazardous_content_description">Not hazardous</string>

</resources>
